branches/reporting/src/public/css/etd.css
/* ... */
#navbar-curve  .c22 { margin-right:38px; }
#navbar-curve  .c23 { margin-right:39px; }
#navbar-curve  .c24 { margin-right:40px; }
#navbar-curve  .c25 { margin-right:42px; }
#navbar-curve  .c26 { margin-right:44px; }
#navbar-curve  .c27 { margin-right:46px; }
#navbar-curve  .c28 { margin-right:48px; }
#navbar-curve  .c29 { margin-right:50px; }
#navbar-curve  .c30 { margin-right:52px; }



/* record list */
div.listrecord { 
  border:none;
  border-bottom:1px solid black;
  padding-bottom:10px;
  margin-bottom:10px;
/*  clear:right;*/
}

div.fullrecord { 
  position:relative;
  width:100%;
}

div.record_title { 
 font-weight:bold;
}

div.record_title p { 
  margin: 0px;
}

#abstract p {  /* div or body (in FCKeditor) */
 margin: 1em 0;
}

/* workflow action links */
div.actions { 
  float:right;              
  text-align:right;
  background:#ffffff;
 }

a.action { 
  float:right;
  color:blue;
  clear:right;
  text-decoration:none;
}
a.action img { 
 border:0px;
 vertical-align:middle; 
}

a.edit {
  float:left;
  color:blue;
  text-decoration:none;
}

div.info { 
  clear:right;
  float:right;
  text-align:right;
}

div.listrecord h3 { 
  font-size:115%;
  margin-top:0px;
  margin-bottom:5px;
}
div.listrecord p, .fullrecord p { /* div or body (in FCKeditor) */
  margin:0px;
}

div.fullrecord { 
  background:#ffffff;
}

div.fullrecord h1 { 
  font-weight:normal;
}

div.fullrecord h2 { 
/*  font-variant:normal;*/
  margin-top:10px;
  border-top:1px solid #f1aa00;
  border-bottom:1px solid #f1aa00;
  background-color:#fffdee; /* very faint yellow */
  clear:both;
}

div.fullrecord div.use { 
 margin:10px 0px;
 font-style:italic;
}
div.contact_info h2 { 
  margin:2px;
  border:none;
  background-color:white;
}



div.listrecord p.status { 
  margin-top:8px;
  font-size:125%;
 }

div.listrecord div.record_status { 
  margin-top:5px;
  padding:4px;
  background-color:#efefef;
  border: 1px solid #565656;
}

h2.history { 
  margin-top:15px;
}

table.history { 
/*border-top:double #f1aa00;
margin-top:15px;*/
 }

table.history th { 
  text-align:left;
}

p.note { 
  font-size:11pt;
  text-align:center;
  margin:15px;
}


table div.fullrecord { 
  padding:0.5in;
}

div#files span.description, div#files .lastmodified { 
 font-size:90%;
 color: #787878;
}

div#preview { 
  float:right;
/*  border:1px solid blue;*/
  text-align:right;
  padding-bottom:10px;            
}

.suggestor_value { 
  background:#efefef;
/*  display:inline;*/
/*  border:1px solid black;*/
  padding:2px;
 }


h2.instructions { 
  margin-bottom:0px;
}
ul.instructions { 
  margin-top:0px;
  margin-bottom:0px;
  margin-right:0.5in;
  list-style-type:circle;
  font-size:11pt;
}


div.buttons { 
 text-align:center;
 width:100%;
 font-size:14pt;
 margin-top:5px;
 padding-bottom:2px;
 border-top:1px solid #f1aa00;
 border-bottom:1px solid #f1aa00;
 background:#fffdee;  /* very faint yellow */
}



div.cv_select { 
 margin:0.25in;
 position:relative;
 width:100%;      
 padding-bottom:0.5in;
}
div.close { 
 position:fixed;
 text-align:right;
 right:25px;
 top:25px;
}

div.listnav { 
  background-color:#14214d;
  text-align:center;       
  vertical-align:middle; 
  height:20px;
}
.admin-nav { 
 float:right;
}
.admin-nav select { 
 font-size:85%; /* hack: match the rest of listnav inputs */
 }

/* statistics */
ol.top50 { 
 clear:right;
 padding-top:0.25in;
}

table.statistics { 
 width:100%;
 margin-top:15px;
 margin-bottom:15px;
 clear:right;
}

table.statistics td.caption {  
 text-align:left;
 border-bottom: 1px solid #f1aa00;
 border-top: 1px solid #f1aa00;
}

table.statistics td.count, table.statistics th { 
 text-align:right;
}

table.statistics td.caption {  
 text-align:left;
 border-bottom: 1px solid #f1aa00;
 border-top: 1px solid #f1aa00;
}

table.statistics td.count, table.statistics th { 
 text-align:right;
}
td.count { width:30px }
td.label { width:250px }

td.abstract, th.abstract { 
 background-color: #e8eeff/*#bac2d9*/;
}

td.download, th.download { 
/* background-color:#f3e7c9;*/
 background-color:#fff8e8;
}

td.separator{
    border-bottom-style:solid;
    border-bottom-width:2px;
}

div.abstractviews { 
  background-color:#14214d;
  border:1px solid black;
  color:#fff;
  font-size:8pt;
  line-height:10px;
  text-align:right;
}

div.downloads { 
  background-color:#f1aa00;
  border:1px solid black;
  height:10px;
  text-align:right;
  font-size:8pt;
  line-height:10px;
}

div.key { 
  float:left;
  height:10px;
  width:10px;
  margin: 0px 5px;
}

img.flag { border:1px solid black; }


div#roadmap { 
 text-transform:uppercase;
 font-size:15pt;
 font-weight:bold;
 margin:15px;
}

div#roadmap span.label { 
 font-size:12pt;
 text-transform:none;
 font-weight:normal;
}

div#roadmap div.state {  
  display:inline;
  padding:5px;
  font-size:12pt;
  background-color:#969696;
  border:1px solid black;
  color:white;
}

div#roadmap div.current { 
 background-color:#0dac1c;
}

table.advanced_search th { 
 text-align:right;
 font-size:11pt;
}

div.abstract p { 
 margin-bottom:10px;
}


/* edit research fields */
div#select_researchfields { 
  height:300px;
  overflow:auto;
  border:1px solid gray;
}

div#select_researchfields a.selected, ul#select_program li.selected > a, span.selected{
 background-color:yellow;
}

div#submission_status { 
 position:absolute;
 right:5px;        
 padding:5px;                
 width:175px;
 border:1px solid #f1aa00;
 background-color: #fffdee; /* very faint yellow */
}

div#submission_status a { 
  text-decoration:none;
  clear: right;
}

div#submission_status ul { list-style: none; }

ul.ui-menu { list-style: none; padding-left: 0; margin-left: 0; border: 1px solid; width: 25em;}

div#submission_status ul#submission-checklist {
  clear: right;
  margin:0px;
  padding:0px;
}
ul#submission-checklist li {
  text-indent: -15px;
  padding-left: 15px;
}

div.status-key {
    margin-top: 0px;
    margin-bottom: 7px;
    background-color: white;
    padding-top: 0px;
    padding-bottom: 0px;
}
/* ... */

